--- a/package.json
+++ b/package.json
@@ -1,18 +1,17 @@
 {
-  "name": "devconnect-day2",
+  "name": "devconnect-backend",
   "version": "1.0.0",
+  "description": "DevConnect Backend API",
   "main": "server.js",
   "scripts": {
     "start": "node server.js"
   },
-  "keywords": [],
-  "author": "",
+  "author": "Writikesh",
   "license": "ISC",
-  "description": "",
   "dependencies": {
     "cors": "^2.8.6",
-    "dotenv": "^17.3.1",
-    "express": "^5.2.1",
-    "mongoose": "^9.2.2"
+    "dotenv": "^16.4.5",
+    "express": "^4.18.2",
+    "mongoose": "^8.3.4"
   }
 }
